Solved coordinate display flickering on hover
Using CSS3 pseudo-class instead of extra element

--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -142,7 +142,9 @@ body {
   right: 20em;
   bottom: 0.5em;
 
-  .mouse-coordinates {
-    margin: 10px;
-  }
+  padding: 10px !important;
+}
+
+.ol-mouse-position:empty {
+  display: none;
 }
